# kotor-mod-manager

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  analyze_mods.py  backend.spec  cliff.toml  config.py  explore_sites.py  kotor_mod_installer.spec  main.py  mod_dependency_reference.md  requirements.txt  sample_download.py  sample_results.json
.github/: dependabot.yml
backend/: fsutil.py  library_routes.py  models.py  server.py
docs/: index.html
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src-tauri/: Cargo.toml  gen_icons.py  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: main.rs
installer/: _version.py  build_directives.py  config_loader.py  detector.py  extractor.py  fs_retry.py  game_validate.py  installer.py  installer_config.json  mod_manager.py  patcher_strategy.py  pipeline.py  runner.py  ui_automation.py
legacy/: main_tkinter.py
scraper/: build_scraper.py  deadlystream.py  neocities.py  nexus.py
scripts/: README.md  analyze_mods.py  audit_manual_coverage.py  build_instructions.json  deep_analyze.py  dump_build_instructions.py  lookup_urls.py  nuance_report.txt  sample_download.py  scrape_build_detail.py  scrape_order.py  verify_build_directives_live.py
tests/: test_build_directives.py  test_build_headless.py  test_custom_builds.py  test_deadlystream_urls.py  test_download_pause_resume.py  test_fs_retry.py  test_game_validate.py  test_install_all_build.py  test_install_methods.py  test_manual_install.py  test_pipeline_fixes.py
(+58 files in other folders)
